# fractal-draw

./: README.md
C++/: CMakeLists.txt  main.cpp
C++/FractalDFS/: FractalDFS.cpp  FractalDFS.hpp
C++/FractalRecipes/: FractalRecipe.cpp  FractalRecipe.hpp
C++/FractalRecipes/Classic/: Classic.cpp  Classic.hpp
C++/FractalRecipes/Maskit/: Maskit.cpp  Maskit.hpp
C++/FractalRecipes/Reily/: Reily.cpp  Reily.hpp
C++/FractalRecipes/Yourgens/: Yourgens.cpp  Yourgens.hpp
C++/results/: results.txt
C++/utils/: util.cpp  util.hpp
Haskell/: FractalGraph.cabal
Haskell/src/: Main.hs
Haskell/src/Utils/: FractalDFS.hs  FractalRecipe.hs  Util.hs
